--- a/Client/AngularAmazono/src/app/profile/profile.component.html
+++ b/Client/AngularAmazono/src/app/profile/profile.component.html
@@ -9,7 +9,7 @@
     </div>
     <div *ngIf="data.user" class="row mt-5">
       <div class="col-md-3">
-        <img [src]="data.user.picture" alt="userimage" class="round-circle image">
+        <img [src]="data.user.picture" alt="userimage" class="rounded-circle image">
       </div>
       <div class="col-md-8 ml-3">
         <p id="name" class="lead">{{ data.user.name }}</p>
@@ -24,7 +24,7 @@
           <hr>
           <div class="row">
             <div class="col-md-6 mb-3">
-              <a routerLink="/profile/postproduct" class="btn btn-outline-success btn-block"></a>
+              <a routerLink="/profile/postproduct" class="btn btn-outline-success btn-block">Post Product for Sale</a>
             </div>
             <div class="col-md-6">
               <a routerLink="/profile/myproducts" class="btn btn-outline-info btn-block">My Products</a>
