--- a/Client/AngularAmazono/src/app/category/category.component.html
+++ b/Client/AngularAmazono/src/app/category/category.component.html
@@ -28,7 +28,9 @@
                 </p>
                 <p>{{ product.price | currency:"&#8377;" }}</p>
               </div>
-              <div class="col-md-6"></div>
+              <div class="col-md-6">
+                <ngb-rating [(rate)]="product.averageRating" [starTemplate]="t" [readonly]="true" max="5"></ngb-rating>
+              </div>
             </div>
           </div>
         </div>
@@ -37,3 +39,12 @@
     </div>
   </div>
 </section> 
+
+
+<ng-template #t let-fill="fill">
+  <span *ngIf="fill === 100" class="star full">&#9733;</span>
+  <span *ngIf="fill === 0" class="star">&#9733;</span>
+  <span *ngIf="fill < 100 && fill > 0" class="star">
+    <span class="half" [style.width.%]="fill">&#9733;</span>&#9733;
+  </span>
+</ng-template>
