--- a/Client/AngularAmazono/src/app/product/product.component.html
+++ b/Client/AngularAmazono/src/app/product/product.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid p-5">
     <app-message></app-message>
     <div *ngIf="!product" class="m-auto">
-      <h1 class="text-center-display-3 mt-5">
+      <h1 class="text-center display-3 mt-5">
         <i class="fa fa-spinner fa-spin"></i>
       </h1>
     </div>
