--- a/Client/AngularAmazono/src/app/product/product.component.html
+++ b/Client/AngularAmazono/src/app/product/product.component.html
@@ -35,6 +35,7 @@
               <h5 class="card-title">Price: {{ product.price | currency:"&#8377;" }}</h5>
               <br>
               <br>
+              <a class="btn btn-warning btn-block" (click)="addToCart()">Add to Cart</a>
             </div>
           </div>
         </div>
