--- a/Client/AngularAmazono/src/app/address/address.component.html
+++ b/Client/AngularAmazono/src/app/address/address.component.html
@@ -33,7 +33,7 @@
             </div>
             <div class="col-md-4">
               <div class="form-group">
-                <label>Postal COde</label>
+                <label>Postal Code</label>
                 <input type="text" name="postalCode" class="form-control" [(ngModel)]="currentAddress.postalCode">
               </div>
             </div>
