--- a/Client/AngularAmazono/src/app/app.component.html
+++ b/Client/AngularAmazono/src/app/app.component.html
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-main">
   <div class="container-fluid">
     <a routerLink='/' class="navbar-brand">
-      <img src="./assets/img/logo.png" alt="logo" id="logo"> Amazono
+      <img src="./assets/img/symbol.png" alt="symbol" id="symbol">
+      <img src="./assets/img/logo.png" alt="logo" id="logo">
     </a>
     <button class="navbar-toggler" (click)="isCollapsed = !isCollapsed">
       <span class="navbar-toggler-icon"></span>
