--- a/Client/Kart/src/app/app.component.html
+++ b/Client/Kart/src/app/app.component.html
@@ -57,6 +57,6 @@
 
 <footer id="main-footer" class="bg-main text-white mt-5 p-5">
   <div class="container">
-    <p class="load text-center">Copyright &copy; 2018 Amazona</p>
+    <p class="load text-center">Copyright &copy; 2018 dealKart</p>
   </div>
 </footer>
