--- a/Client/Kart/src/app/app.component.html
+++ b/Client/Kart/src/app/app.component.html
@@ -59,4 +59,5 @@
   <div class="container">
     <p class="load text-center">Copyright &copy; 2018 dealKart</p>
   </div>
+  <div class="float-right">Vinay Kumar Agrawal</div>
 </footer>
