--- a/Client/Kart/src/app/product/product.component.html
+++ b/Client/Kart/src/app/product/product.component.html
@@ -57,7 +57,7 @@
               </div>
               <hr>
             </div>
-            <div class="card bg-light my-5">
+            <div class="card bg-light mt-5">
               <div class="card-body">
                 <h4 class="card-title">Add a Review</h4>
                 <hr>
