--- a/Client/Kart/src/app/app.component.html
+++ b/Client/Kart/src/app/app.component.html
@@ -11,7 +11,7 @@
       <div class="input-group w-75">
         <input type="text" name="search" class="form-control" [(ngModel)]="searchTerm" (key.enter)="search()">
         <span id="searchBtn" class="bg-warning" (click)="search()">
-          <i class="fa-search"></i>
+          <i class="fa fa-search"></i>
         </span>
       </div>
       <div class="w-100">
