--- a/Client/Kart/src/app/login/login.component.html
+++ b/Client/Kart/src/app/login/login.component.html
@@ -10,11 +10,11 @@
             <form>
               <div class="form-group">
                 <label>Email</label>
-                <input type="email" name="email" class="form-control" [(ngModel)]="email">
+                <input type="email" name="email" class="form-control" [(ngModel)]="email" (keyup.enter)="login()">
               </div>
               <div class="form-group">
                 <label>Password</label>
-                <input type="password" name="password" class="form-control" [(ngModel)]="password">
+                <input type="password" name="password" class="form-control" [(ngModel)]="password" (keyup.enter)="login()">
               </div>
               <button type="button" class="btn btn-primary btn-block" (click)="login()" [disabled]="btnDisabled">Login</button>
             </form>
